--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,145 @@
+aioredis==1.3.1
 asgiref==3.5.2
 asttokens==2.0.8
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.1.0
+autobahn==22.7.1
+Automat==20.2.0
 backcall==0.2.0
+beautifulsoup4==4.11.1
 black==22.10.0
+bleach==5.0.1
+blis==0.7.9
+boto==2.49.0
+boto3==1.26.21
+botocore==1.29.21
+bs4==0.0.1
+catalogue==2.0.8
+certifi==2022.9.24
+cffi==1.15.1
+channels==2.4.0
+channels-redis==2.4.2
+charset-normalizer==2.1.1
 click==8.1.3
-colorama==0.4.5
+colorama==0.4.6
+confection==0.0.3
+constantly==15.1.0
+contourpy==1.0.5
+cryptography==38.0.3
+cycler==0.11.0
+cymem==2.0.7
+daphne==2.5.0
 decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+dj-database-url==1.0.0
 Django==3.2.13
-django-bootstrap5==22.1
+django-allauth==0.51.0
+django-appconf==1.0.5
+django-bootstrap-v5==1.0.11
+django-bootstrap5==22.2
+django-cleanup==6.0.0
+django-cors-headers==3.13.0
 django-extensions==3.2.1
+django-heroku==0.3.1
+django-imagekit==4.1.0
+django-mathfilters==1.0.0
+django-multiselectfield==0.1.12
+django-shortcuts==1.6
+django-storages==1.13.1
+django-summernote==0.8.20.0
+django-widget-tweaks==1.4.12
+djangorestframework==3.14.0
+exceptiongroup==1.0.0
 executing==1.1.1
+fonttools==4.37.4
+gunicorn==20.1.0
+h11==0.14.0
+hiredis==2.0.0
+hyperlink==21.0.0
+idna==3.4
+incremental==21.3.0
 ipython==8.5.0
 jedi==0.18.1
+Jinja2==3.1.2
+jmespath==1.0.1
+kiwisolver==1.4.4
+langcodes==3.3.0
+MarkupSafe==2.1.1
+matplotlib==3.6.0
 matplotlib-inline==0.1.6
+msgpack==0.6.2
+murmurhash==1.0.9
 mypy-extensions==0.4.3
+numpy==1.23.3
+oauthlib==3.2.2
+outcome==1.2.0
+packaging==21.3
+pandas==1.4.4
 parso==0.8.3
-pathspec==0.10.1
+pathspec==0.10.2
+pathy==0.6.2
 pickleshare==0.7.5
-platformdirs==2.5.2
+pilkit==2.0
+Pillow==9.3.0
+platformdirs==2.5.4
+preshed==3.0.8
 prompt-toolkit==3.0.31
+psycopg2==2.9.3
+psycopg2-binary==2.9.5
 pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydantic==1.10.2
 Pygments==2.13.0
-pytz==2022.4
+PyJWT==2.6.0
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
+pyproj==3.3.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python3-openid==3.2.0
+pytz==2022.6
+rcssmin==1.1.0
+redis==4.3.4
+requests==2.28.1
+requests-oauthlib==1.3.1
+rjsmin==1.2.0
+s3transfer==0.6.0
+selenium==4.5.0
+service-identity==21.1.0
 six==1.16.0
+smart-open==5.2.1
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+spacy==3.4.2
+spacy-legacy==3.0.10
+spacy-loggers==1.0.3
 sqlparse==0.4.3
+srsly==2.4.5
 stack-data==0.5.1
+thinc==8.1.5
 tomli==2.0.1
+tqdm==4.64.1
 traitlets==5.4.0
+trio==0.22.0
+trio-websocket==0.9.2
+Twisted==22.8.0
+twisted-iocpsupport==1.0.2
+txaio==22.2.1
+typer==0.4.2
 typing_extensions==4.4.0
+tzdata==2022.6
+urllib3==1.26.13
+wasabi==0.10.1
 wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.2
+whitenoise==6.2.0
+wrapt==1.14.1
+wsproto==1.2.0
+zope.interface==5.4.0
